--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     <string name="create_match">Create Match</string>
     <string name="back_button_description">Back</string>
     <string name="location">Location:</string>
+    <string name="type_a_message">Type a message...</string>
+    <string name="send">Send</string>
+    <string name="chat">CHAT</string>
+    <string name="start_new_chat">" New Chat"</string>
+    <string name="chat1">CHAT</string>
+    <string name="start_new_chat1">New Chat</string>
 </resources>
